--- a/visu/confVisu.ini
+++ b/visu/confVisu.ini
@@ -9,7 +9,7 @@ name=P1 Pepita
 nameBg=bg
 nameFile=Tir
 path=/home/gautier/Documents/CamElectron/240110
-pathAutoSave=C:/Users/SALLEJAUNE/Desktop/2019
+pathAutoSave=C:/Users/APPLI/Desktop
 pathBg=
 r1x=100
 r1y=100
@@ -28,3 +28,5 @@ xc=198
 xec=197
 yc=596
 yec=598
+init_energy_mJ=60.
+init_duration_fs=28.
